# editor

./: .gitignore  README.md  main.py  pyproject.toml
configs/: pipeline.example.toml  pipeline.gemini.example.toml  pipeline.ollama.example.toml  pipeline.openai.example.toml  pipeline.real.example.toml
docs/: architecture.zh-CN.md
src/movie_brief/: cli.py  config.py  llm_clients.py  media.py  models.py  pipeline.py  prompts.py  utils.py
src/movie_brief/stages/: __init__.py  asr.py  delivery.py  render_plan.py  scene_understanding.py  script_generation.py  selection.py  shot_detection.py  story_modeling.py
tests/: test_delivery.py  test_llm_clients.py  test_pipeline.py  test_real_providers.py  test_selection.py  test_story_modeling.py
