[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "movie-brief"
version = "0.1.0"
description = "MVP scaffold for automatic movie commentary compression"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "tqdm>=4.66.0",
]

[project.optional-dependencies]
video = [
  "scenedetect[opencv]>=0.6.2",
  "faster-whisper>=1.1.0",
  "moviepy>=1.0.3",
]
llm = [
  "ollama>=0.4.0",
]
delivery = [
  "edge-tts>=6.1.12",
  "azure-cognitiveservices-speech>=1.42.0",
]

[project.scripts]
movie-brief = "movie_brief.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
